--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
 <html>	<head>
 	</head>
 	<body>
-		<script type="text/javascript" src="http://ansirxnat.medeng.wfubmc.edu/Xdevel/lib/google-closure-library/closure/goog/base.js"></script>
-		<script type="text/javascript" src="http://ansirxnat.medeng.wfubmc.edu/Xdevel/xtk-deps.js"></script>
+		<script type="text/javascript" src="lib/google-closure-library/closure/goog/base.js"></script>
+		<script type="text/javascript" src="xtk-deps.js"></script>
 		<script type="text/javascript">
 
 			// include all used X-classes here
@@ -38,7 +38,7 @@
 				R.init();
 		
 				V = new X.volume();
-				V.file = 'http://ansirxnat.medeng.wfubmc.edu/Xdevel/test_4D.nii';
+				V.file = 'test_4D.nii';
 
 				R.add(V);
 				R.render();
